[gd_scene load_steps=48 format=2]

[ext_resource path="res://UI/three_dolars.png" type="Texture" id=1]
[ext_resource path="res://PlayerKeyboard/Player_keyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cafe/Floor.png" type="Texture" id=3]
[ext_resource path="res://Cafe/Left.png" type="Texture" id=4]
[ext_resource path="res://CoffeMachine/CoffeeMachine.tscn" type="PackedScene" id=5]
[ext_resource path="res://CupSize/Cupsize.tscn" type="PackedScene" id=6]
[ext_resource path="res://Inventory/inventory.gd" type="Script" id=7]
[ext_resource path="res://Cafe/UpWall.png" type="Texture" id=8]
[ext_resource path="res://Font/Notepen.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Inventory/Circle.png" type="Texture" id=10]
[ext_resource path="res://SugarAdder/SugarAdder.tscn" type="PackedScene" id=11]
[ext_resource path="res://TrashBin/TrashBin.tscn" type="PackedScene" id=12]
[ext_resource path="res://Cafe/Wall.png" type="Texture" id=13]
[ext_resource path="res://Doors/Doors.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI/UI.png" type="Texture" id=15]
[ext_resource path="res://Seat/Seat.tscn" type="PackedScene" id=16]
[ext_resource path="res://Cafe/cafe.gd" type="Script" id=17]
[ext_resource path="res://Table/Table.png" type="Texture" id=18]
[ext_resource path="res://MainMenu/MainMenu.tscn" type="PackedScene" id=19]
[ext_resource path="res://Tutorial_NPC/Tutorial_NPC.tscn" type="PackedScene" id=20]
[ext_resource path="res://Tutorial_NPC/Tutorial_canvas.png" type="Texture" id=21]
[ext_resource path="res://01_Sounds/pay.wav" type="AudioStream" id=22]
[ext_resource path="res://PayPlace/PayMachine.png" type="Texture" id=23]
[ext_resource path="res://01_Sounds/Piano.wav" type="AudioStream" id=24]

[sub_resource type="NavigationPolygon" id=13]
vertices = PoolVector2Array( 816.945, -192, 864, -192, 864, 96, 840, 24, 920, 96, 920, 368, 544, 288, 544, 280, 40, 96, 160, 96, 160, 136, 112, 136, 40, 368, 112, 144, 136, 144, 136, 194, 112, 194, 112, 211, 136, 211, 136, 272, 112, 272, 112, 280, 264, 280, 392, 288, 264, 272, 240, 272, 240, 212, 264, 212, 392, 220, 264, 195, 240, 195, 240, 144, 264, 144, 264, 136, 216, 136, 216, 96, 440, 96, 392, 128, 440, 128, 392, 136, 416, 136, 416, 198, 392, 198, 416, 220, 416, 280, 392, 280, 520, 280, 520, 219, 544, 219, 544, 197, 520, 197, 520, 136, 544, 136, 544, 128, 840, 96, 496, 128, 496, 96, 816, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 12, 8, 11, 13 ), PoolIntArray( 13, 14, 15, 16 ), PoolIntArray( 12, 13, 16 ), PoolIntArray( 12, 16, 17 ), PoolIntArray( 17, 18, 19, 20 ), PoolIntArray( 12, 17, 20 ), PoolIntArray( 12, 20, 21 ), PoolIntArray( 5, 12, 21, 22, 23 ), PoolIntArray( 24, 25, 26, 27, 28 ), PoolIntArray( 29, 30, 31, 32 ), PoolIntArray( 33, 34, 35, 36, 37 ), PoolIntArray( 36, 38, 37 ), PoolIntArray( 33, 37, 39, 32 ), PoolIntArray( 32, 39, 40, 41, 42, 29 ), PoolIntArray( 27, 29, 42, 28 ), PoolIntArray( 28, 43, 44, 45, 24 ), PoolIntArray( 22, 24, 45, 23 ), PoolIntArray( 5, 23, 6 ), PoolIntArray( 7, 46, 47, 48 ), PoolIntArray( 2, 7, 48 ), PoolIntArray( 2, 48, 49 ), PoolIntArray( 49, 50, 51, 52 ), PoolIntArray( 2, 49, 52 ), PoolIntArray( 2, 52, 53, 54 ), PoolIntArray( 53, 55, 56, 54 ), PoolIntArray( 2, 54, 3 ), PoolIntArray( 0, 3, 57 ) ]
outlines = [ PoolVector2Array( 840, 96, 496, 96, 496, 128, 544, 128, 544, 136, 520, 136, 520, 197, 544, 197, 544, 219, 520, 219, 520, 280, 544, 280, 544, 288, 392, 288, 392, 280, 416, 280, 416, 220, 392, 220, 392, 198, 416, 198, 416, 136, 392, 136, 392, 128, 440, 128, 440, 96, 216, 96, 216, 136, 264, 136, 264, 144, 240, 144, 240, 195, 264, 195, 264, 212, 240, 212, 240, 272, 264, 272, 264, 280, 112, 280, 112, 272, 136, 272, 136, 211, 112, 211, 112, 194, 136, 194, 136, 144, 112, 144, 112, 136, 160, 136, 160, 96, 40, 96, 40, 368, 920, 368, 920, 96, 864, 96, 864, -192, 816.945, -192, 816, 0, 840, 24 ) ]

[sub_resource type="NavigationPolygon" id=14]
vertices = PoolVector2Array( 216, 96, 216, 112, 160, 112, 160, 96 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 160, 96, 160, 112, 216, 112, 216, 96 ) ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 196, 13 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 252, 13 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=12]
size = 18
font_data = ExtResource( 9 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.25974, 0.655844, 0.993506 )
colors = PoolColorArray( 0.729412, 0.729412, 0.729412, 0, 0.816895, 0.816895, 0.816895, 0.490196, 0.824707, 0.824707, 0.824707, 0.490196, 0.768627, 0.768627, 0.768627, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.966102, 0.692045 ), -2.20412, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 40, 1, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, -50, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 10 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 27.5, 20.5 )

[sub_resource type="CircleShape2D" id=18]
radius = 25.02

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0, 0.707792, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 21 )

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 0.156818 ), 0.0, 4.5974, 0, 0, Vector2( 1, 0.638636 ), -0.938636, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=23]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
gravity = Vector3( 0, -35, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
scale_random = 1.0
scale_curve = SubResource( 27 )
color_ramp = SubResource( 26 )

[sub_resource type="DynamicFont" id=16]
size = 31
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
size = 30
extra_spacing_char = -1
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=19]
size = 23
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=24]
size = 23
outline_size = 3
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
extra_spacing_bottom = -4
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=20]
size = 23
extra_spacing_bottom = -6
font_data = ExtResource( 9 )

[node name="Cafe" type="Node2D"]
script = ExtResource( 17 )

[node name="Floor" type="Sprite" parent="."]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
position = Vector2( 480, 268 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Navigation2D" type="Navigation2D" parent="."]
edge_connection_margin = 10.0

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 13 )

[node name="NavigationPolygonInstance2" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 14 )

[node name="NavigationPolygonInstance3" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( 280, 0 )
navpoly = SubResource( 14 )

[node name="YSort" type="YSort" parent="Navigation2D"]
position = Vector2( 0, -2 )

[node name="Bar" type="Sprite" parent="Navigation2D/YSort"]
position = Vector2( 480, 378 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
offset = Vector2( 0, -1.5 )

[node name="BarCollision" type="StaticBody2D" parent="Navigation2D/YSort"]
position = Vector2( 416, 427 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Navigation2D/YSort/BarCollision"]
position = Vector2( -228, -10 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Navigation2D/YSort/BarCollision"]
position = Vector2( 284, -10 )
shape = SubResource( 4 )

[node name="TrashBin" parent="Navigation2D/YSort" instance=ExtResource( 12 )]
position = Vector2( 308, 386 )

[node name="PlayerKeyboard" parent="Navigation2D/YSort" instance=ExtResource( 2 )]
position = Vector2( 414, 458 )
friction = 0.09

[node name="Cupsize" parent="Navigation2D/YSort" instance=ExtResource( 6 )]
position = Vector2( 54, 412 )
cupsize = "L"

[node name="Cupsize2" parent="Navigation2D/YSort" instance=ExtResource( 6 )]
position = Vector2( 133, 413 )
cupsize = "M"

[node name="Cupsize3" parent="Navigation2D/YSort" instance=ExtResource( 6 )]
position = Vector2( 214, 413 )
cupsize = "S"

[node name="CoffeeMachine" parent="Navigation2D/YSort" instance=ExtResource( 5 )]
position = Vector2( 533, 406 )

[node name="CoffeeMachine2" parent="Navigation2D/YSort" instance=ExtResource( 5 )]
position = Vector2( 637, 406 )

[node name="SugarAdder" parent="Navigation2D/YSort" instance=ExtResource( 11 )]
position = Vector2( 737, 392 )

[node name="UpWall" type="Sprite" parent="Navigation2D/YSort"]
position = Vector2( 480, -61 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="Doors" parent="Navigation2D/YSort" instance=ExtResource( 14 )]
position = Vector2( -4, 44 )

[node name="Seat1" parent="Navigation2D/YSort" instance=ExtResource( 16 )]
position = Vector2( 130, 167 )
collision_layer = 2
collision_mask = 2

[node name="Seat2" parent="Navigation2D/YSort" instance=ExtResource( 16 )]
position = Vector2( 129, 242 )
collision_layer = 2
collision_mask = 2

[node name="Seat3" parent="Navigation2D/YSort" instance=ExtResource( 16 )]
position = Vector2( 247, 243 )
collision_layer = 2
collision_mask = 2

[node name="Seat4" parent="Navigation2D/YSort" instance=ExtResource( 16 )]
position = Vector2( 249, 168 )
collision_layer = 2
collision_mask = 2

[node name="Seat5" parent="Navigation2D/YSort" instance=ExtResource( 16 )]
position = Vector2( 408, 171 )
collision_layer = 2
collision_mask = 2

[node name="Seat6" parent="Navigation2D/YSort" instance=ExtResource( 16 )]
position = Vector2( 528, 170 )
collision_layer = 2
collision_mask = 2

[node name="Seat7" parent="Navigation2D/YSort" instance=ExtResource( 16 )]
position = Vector2( 408, 251 )
collision_layer = 2
collision_mask = 2

[node name="Seat8" parent="Navigation2D/YSort" instance=ExtResource( 16 )]
position = Vector2( 528, 250 )
collision_layer = 2
collision_mask = 2

[node name="Table" type="Sprite" parent="Navigation2D/YSort"]
position = Vector2( 189, 213 )
scale = Vector2( 5, 5 )
texture = ExtResource( 18 )

[node name="Table2" type="Sprite" parent="Navigation2D/YSort"]
position = Vector2( 469, 216 )
scale = Vector2( 5, 5 )
texture = ExtResource( 18 )

[node name="Tutorial_NPC" parent="Navigation2D/YSort" instance=ExtResource( 20 )]
position = Vector2( 838, -151 )
collision_mask = 2

[node name="PayMachine" type="Sprite" parent="Navigation2D/YSort"]
position = Vector2( 848, 393 )
scale = Vector2( 5, 5 )
texture = ExtResource( 23 )
offset = Vector2( 0, -10 )

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 0, -2 )
script = ExtResource( 7 )

[node name="CoffeSize" type="Sprite" parent="Inventory"]
position = Vector2( 112, 479 )
scale = Vector2( 5, 5 )
offset = Vector2( 0, 5 )

[node name="CoffeeName" type="Label" parent="Inventory/CoffeSize"]
margin_left = -13.2
margin_top = -12.8
margin_right = 93.8
margin_bottom = 25.2
rect_rotation = -5.0
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Sugar" type="Label" parent="Inventory/CoffeSize"]
margin_left = -4.6
margin_top = -4.60001
margin_right = 102.4
margin_bottom = 33.4
rect_rotation = 2.0
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
align = 1
valign = 1
autowrap = true

[node name="Particles2D" type="Particles2D" parent="Inventory/CoffeSize"]
show_behind_parent = true
position = Vector2( -0.199997, -8.00003 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 20
lifetime = 1.5
speed_scale = 0.4
randomness = 0.83
process_material = SubResource( 8 )
texture = ExtResource( 10 )

[node name="InventoryUp" type="TextureButton" parent="Inventory/CoffeSize"]
margin_left = -22.0
margin_top = -25.0
margin_right = 56.0
margin_bottom = 35.0

[node name="Wall" type="Sprite" parent="."]
position = Vector2( 480, -27 )
scale = Vector2( 4, 4 )
texture = ExtResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 480, 232 )
current = true

[node name="WallCollider" type="StaticBody2D" parent="."]
position = Vector2( 0, 38 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WallCollider"]
polygon = PoolVector2Array( 31, -31, 31.4286, 50.8673, 34, 542, 932, 547, 932, 50.9196, 34, 50, 34, -33, -170, -144, -111, -269, 1085, -274, 1088, -40, 1112, 688, 176, 688, -144, 608, -200, 192, -152, -128 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="WallCollider"]
position = Vector2( 279, -1 )
polygon = PoolVector2Array( 160, 151, 160, 242, 220, 242, 220, 151 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="WallCollider"]
position = Vector2( -1, -4 )
polygon = PoolVector2Array( 160, 151, 160, 242, 220, 242, 220, 151 )

[node name="NPC_spawn_time" type="Timer" parent="."]
wait_time = 15.0

[node name="ExitPoint" type="Area2D" parent="."]
position = Vector2( 839, -188 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitPoint"]
shape = SubResource( 15 )

[node name="PayPoint" type="Area2D" parent="."]
position = Vector2( 847, 360 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PayPoint"]
shape = SubResource( 18 )

[node name="MoneyParticles2D" type="Particles2D" parent="PayPoint"]
position = Vector2( -1, -105 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
process_material = SubResource( 23 )
texture = ExtResource( 1 )

[node name="UI" type="Node2D" parent="."]

[node name="Ui" type="Sprite" parent="UI"]
position = Vector2( 854, 464 )
scale = Vector2( 5, 5 )
texture = ExtResource( 15 )

[node name="Ui2" type="Sprite" parent="UI"]
position = Vector2( 854, 413 )
scale = Vector2( 5, 5 )
texture = ExtResource( 15 )

[node name="Money" type="Label" parent="UI"]
margin_left = 779.0
margin_top = 439.0
margin_right = 930.0
margin_bottom = 489.0
custom_fonts/font = SubResource( 16 )
text = "Money: 0$"
align = 1
valign = 1
autowrap = true

[node name="TimeLeft" type="Label" parent="UI"]
margin_left = 777.0
margin_top = 379.0
margin_right = 932.0
margin_bottom = 446.0
custom_fonts/font = SubResource( 17 )
text = "Time left: 300s"
align = 1
valign = 1
autowrap = true

[node name="OneSecondTimer" type="Timer" parent="UI"]

[node name="Tutorial_npc" type="Node2D" parent="UI"]

[node name="1" type="Node2D" parent="UI/Tutorial_npc"]
position = Vector2( -64, -91 )

[node name="Sprite4" type="Sprite" parent="UI/Tutorial_npc/1"]
position = Vector2( 342.5, 97 )
scale = Vector2( 5, 5 )
texture = ExtResource( 21 )

[node name="TutorialText4" type="Label" parent="UI/Tutorial_npc/1"]
margin_left = 227.0
margin_top = 64.0
margin_right = 416.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 19 )
text = "1. Go to the customer (learn what he wants)"
align = 1
valign = 1
autowrap = true

[node name="2" type="Node2D" parent="UI/Tutorial_npc"]
visible = false
position = Vector2( -21, 176 )

[node name="Sprite" type="Sprite" parent="UI/Tutorial_npc/2"]
position = Vector2( 131, 284 )
rotation = -3.14159
scale = Vector2( 5, 5 )
texture = ExtResource( 21 )

[node name="TutorialText" type="Label" parent="UI/Tutorial_npc/2"]
margin_left = 48.0
margin_top = 247.0
margin_right = 237.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 19 )
text = "2. Choose cup size       (L, M, S)."
align = 1
valign = 1
autowrap = true

[node name="TutorialText2" type="Label" parent="UI/Tutorial_npc/2"]
margin_left = 259.0
margin_top = -208.0
margin_right = 497.0
margin_bottom = -130.0
custom_fonts/font = SubResource( 24 )
text = "<< coffee name
<< X = wants sugar
<< cup size"
valign = 1
autowrap = true

[node name="3" type="Node2D" parent="UI/Tutorial_npc"]
visible = false
position = Vector2( 3, 187 )

[node name="Sprite2" type="Sprite" parent="UI/Tutorial_npc/3"]
position = Vector2( 508, 259 )
rotation = -3.14159
scale = Vector2( 5, 5 )
texture = ExtResource( 21 )

[node name="TutorialText2" type="Label" parent="UI/Tutorial_npc/3"]
margin_left = 433.0
margin_top = 220.0
margin_right = 622.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 19 )
text = "3. Choose coffee you want to make."
align = 1
valign = 1
autowrap = true

[node name="4" type="Node2D" parent="UI/Tutorial_npc"]
visible = false
position = Vector2( 2, 5 )

[node name="Sprite3" type="Sprite" parent="UI/Tutorial_npc/4"]
position = Vector2( 758.5, 243 )
scale = Vector2( 5, 5 )
texture = ExtResource( 21 )

[node name="TutorialText3" type="Label" parent="UI/Tutorial_npc/4"]
margin_left = 644.5
margin_top = 214.0
margin_right = 830.5
margin_bottom = 279.0
custom_fonts/font = SubResource( 19 )
text = "4. Add sugar here (only in some cases)."
align = 1
valign = 1
autowrap = true

[node name="HereMouse" type="Label" parent="UI/Tutorial_npc/4"]
margin_left = 236.0
margin_top = 439.0
margin_right = 672.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 19 )
text = "<< Hover mouse over to see you curent coffee in hand"
align = 1
valign = 1
autowrap = true

[node name="5" type="Node2D" parent="UI/Tutorial_npc"]
visible = false
position = Vector2( -469, -127 )

[node name="Sprite5" type="Sprite" parent="UI/Tutorial_npc/5"]
position = Vector2( 837.5, 133 )
scale = Vector2( 5, 5 )
texture = ExtResource( 21 )

[node name="TutorialText5" type="Label" parent="UI/Tutorial_npc/5"]
margin_left = 721.0
margin_top = 100.0
margin_right = 910.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 19 )
text = "5. Give customer the coffee he wants."
align = 1
valign = 1
autowrap = true

[node name="HereMouse2" type="Label" parent="UI/Tutorial_npc/5"]
margin_left = 797.0
margin_top = 571.0
margin_right = 1233.0
margin_bottom = 649.0
custom_fonts/font = SubResource( 19 )
text = "<< Hover mouse over to see you curent coffee in hand"
align = 1
valign = 1
autowrap = true

[node name="WrongOrder" type="Node2D" parent="UI/Tutorial_npc"]
visible = false
position = Vector2( -238, 104 )

[node name="Sprite4" type="Sprite" parent="UI/Tutorial_npc/WrongOrder"]
position = Vector2( 569.5, 161 )
scale = Vector2( 5, 5 )
texture = ExtResource( 21 )

[node name="TutorialText4" type="Label" parent="UI/Tutorial_npc/WrongOrder"]
margin_left = 454.0
margin_top = 124.0
margin_right = 643.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 20 )
text = "WRONG ORDER! Throw it in the trash and start over"
align = 1
valign = 1
autowrap = true

[node name="Controls" type="Label" parent="UI/Tutorial_npc"]
margin_left = 695.0
margin_top = 91.0
margin_right = 909.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 16 )
text = "WSAD - Move
[E] - Interact
[esc] - Menu
Mouse - Inspect cup"
valign = 1
autowrap = true

[node name="MainMenu" parent="." instance=ExtResource( 19 )]

[node name="Pay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = 5.0
pitch_scale = 1.15

[node name="Piano" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 24 )
autoplay = true

[connection signal="mouse_entered" from="Inventory/CoffeSize/InventoryUp" to="Inventory" method="_on_InventoryUp_mouse_entered"]
[connection signal="mouse_exited" from="Inventory/CoffeSize/InventoryUp" to="Inventory" method="_on_InventoryUp_mouse_exited"]
[connection signal="timeout" from="NPC_spawn_time" to="." method="_on_NPC_spawn_time_timeout"]
[connection signal="body_entered" from="ExitPoint" to="." method="_on_ExitPoint_body_entered"]
[connection signal="body_entered" from="PayPoint" to="." method="_on_PayPoint_body_entered"]
[connection signal="timeout" from="UI/OneSecondTimer" to="." method="_on_OneSecondTimer_timeout"]
[connection signal="finished" from="Piano" to="." method="_on_Piano_finished"]
